--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,12 @@
     "require": {
         "php": "8.1.*",
         "iggyvolz/obs": "dev-main",
-        "ramsey/uuid": "^4.2"
-    }
+        "ramsey/uuid": "^4.2",
+        "amphp/http-client-psr7": "^2",
+        "nyholm/psr7": "^1.5"
+    },
+    "repositories": [{
+        "url": "https://github.com/iggyvolz/http-client-psr7.git",
+        "type": "git"
+    }]
 }
